[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = mk2
url = https://github.com/ssbarnea/mk2
long_description = file: README.md
long_description_content_type = text/markdown
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT
license_file = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Environment :: Console

  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators

  Operating System :: OS Independent

  License :: OSI Approved :: MIT License

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: Jython
  Programming Language :: Python :: Implementation :: PyPy

  Topic :: Software Development :: Bug Tracking
  Topic :: Software Development :: Quality Assurance
  Topic :: Software Development :: Testing

  Topic :: Utilities
keywords =
  test

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = src
packages = find:
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
  setuptools_scm>=1.15.0
  setuptools_scm_git_archive>=1.0

# These are required in actual runtime:
install_requires =

[options.packages.find]
where = src

[codespell]
skip = .tox,.mypy_cache,build,.git,.eggs,pip-wheel-metadata
